kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: boutique-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - $(NAMESPACE).$(SUBDOMAIN).$(DOMAIN)  
    secretName: app-tls
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-external
            port: 
              number: 80
